examples/kubernetes/gateway/20-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omniscope-route
  namespace: omniscope
spec:
  parentRefs:
    - name: omniscope-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hello-a
      backendRefs:
        - name: service-a
          port: 8081
    - matches:
        - path:
            type: PathPrefix
            value: /call-b
      backendRefs:
        - name: service-a
          port: 8081
    - matches:
        - path:
            type: PathPrefix
            value: /hello-b
      backendRefs:
        - name: service-b
          port: 8082
